# OO2026tasks

./: CMakeLists.txt  README.md  viikkotehtava1.lnk
Viikko4/viikkotehtava4/: Asiakas.cpp  Asiakas.h  CMakeLists.txt  Luottotili.cpp  Luottotili.h  Pankkitili.cpp  Pankkitili.h  main.cpp
Viikko6/: CMakeLists.txt  main.cpp  student.cpp  student.h
Week1/viikkotehtava1/: main.cpp
Week2/: game.cpp  game.h  main.cpp
viikko5/: CMakeLists.txt  Notifikaattori.cpp  Notifikaattori.h  Seuraaja.cpp  Seuraaja.h  main.cpp
viikkotehtava3/Viikko3/: CMakeLists.txt  chef.cpp  chef.h  italianchef.cpp  italianchef.h  main.cpp
